@@ -166,6 +166,8 @@ trailing slash.
 .RE
 
 .TP
+.B \-a
+Restore the original access times on the files and directories.
 .B \-c
 Force output to the tty. Normally \fBrdup-tr\fR wants to see it's
 output redirected.
