@@ -18,6 +18,7 @@ struct rdup {
         mode_t f_mode;		/* mode bits */
         time_t f_ctime;		/* change time of the inode */
         time_t f_mtime;		/* modification time of the inode */
+        time_t f_atime;		/* modification time of the inode */
         off_t f_size;		/* file size */
 	dev_t f_dev;		/* ID of device containing file */
 	dev_t f_rdev;		/* device ID (if special file), we use this for major, minor */
